--- a/Raytracer/Raytracer.csproj
+++ b/Raytracer/Raytracer.csproj
@@ -34,6 +34,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -65,6 +66,7 @@
     <Compile Include="Color.cs" />
     <Compile Include="Intersect.cs" />
     <Compile Include="Intersection.cs" />
+    <Compile Include="Plane.cs" />
     <Compile Include="PointLight.cs" />
     <Compile Include="Ray.cs" />
     <Compile Include="Scene.cs" />
